Added Skeleton component, displayed skeleton while wating rendering canvas, and disabled toolbox while loading

--- a/src/components/viewport/Viewport.css
+++ b/src/components/viewport/Viewport.css
@@ -24,4 +24,10 @@
     display: block;
     line-height: 0;
   }
+
+  .viewport__skeleton {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
