--- a/src/components/viewport/toolbox/Toolbox.css
+++ b/src/components/viewport/toolbox/Toolbox.css
@@ -11,7 +11,8 @@
   background-color: var(--component-background);
   opacity: 0.4;
   transition: opacity 0.2s ease;
-  &:hover {
+
+  &:not(.toolbox--disabled):hover {
     opacity: 1;
   }
 
