--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,9 @@
   overflow: auto;
   width: 100%;
   height: 100%;
+  z-index: var(--z-index-app-content);
+  height: calc(100vh - var(--navbar-height));
+  margin-top: var(--navbar-height);
 }
 
 .app-content {
