--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   grid-template-rows: auto 1fr;
 }
 
-.app-content-container {
+.app__content-container {
   overflow: auto;
   width: 100%;
   height: 100%;
@@ -24,7 +24,7 @@
   margin-top: var(--navbar-height);
 }
 
-.app-content {
+.app__content {
   max-width: var(--max-width-xl);
   margin: 0 auto;
   padding: var(--spacing-lg);
