--- a/src/components/chart/histogram/Histogram.css
+++ b/src/components/chart/histogram/Histogram.css
@@ -40,8 +40,27 @@
     color: var(--primary-color-hover);
   }
 
+  .histogram__content {
+    position: relative;
+    width: 350px;
+    height: 200px;
+  }
+
   .histogram__chart-container {
     width: 100%;
     height: 100%;
+  }
+
+  .histogram__empty-message {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: var(--text-color-secondary);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: var(--font-size-xs);
   }
 }
